# medictionaryBack

./: .gitignore  Cargo.toml  README.md
src/: db.rs  error.rs  main.rs
src/config/: app.rs
src/controllers/: alarms.rs  jwt.rs  medicines.rs  mod.rs  reminders.rs  users.rs
src/db/: alarm_data_trait.rs  database.rs  medicine_data_trait.rs  reminder_data_trait.rs  user_data_trait.rs
src/error/: alarm_error.rs  medicine_error.rs  reminder_error.rs  user_error.rs
src/features/alarms/controllers/: alarms.rs  mod.rs
src/features/alarms/db/: alarm_data_trait.rs  mod.rs
src/features/alarms/error/: alarm_error.rs  mod.rs
src/features/medicines/: mod.rs
src/features/medicines/controllers/: medicines.rs
src/features/medicines/db/: medicine.rs  medicine_data_trait.rs
src/features/medicines/error/: mod.rs
src/features/reminders/controllers/: reminders.rs
src/features/reminders/db/: mod.rs  reminder_data_trait.rs
src/features/users/controllers/: jwt.rs  mod.rs  users.rs
src/features/users/db/: mod.rs  user_data_trait.rs
src/handlers/: alarms.rs  medicines.rs  mod.rs  reminders.rs  users.rs
src/models/: alarm.rs  medicine.rs  mod.rs  reminder.rs  user.rs
src/modules/: mod.rs
src/modules/alarms/controllers/: alarms.rs
src/modules/alarms/db/: alarm.rs  alarm_data_trait.rs  mod.rs
src/modules/medicines/controllers/: medicines.rs  mod.rs
src/modules/medicines/db/: medicine.rs  medicine_data_trait.rs  mod.rs
src/modules/medicines/error/: medicine_error.rs
src/modules/reminders/controllers/: reminders.rs
src/modules/users/: mod.rs
(+17 files in other folders)
